argo-server-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
spec:
  type: NodePort
  ports:
  - port: 2746
    protocol: TCP
    targetPort: 2746
    nodePort: 32746
  selector:
    app: argo-server
